# weirdrum

./: Cargo.toml  README.md
src/: lib.rs  sequencer.rs
src/sounds/: hat.rs  kick.rs  mod.rs  snare.rs
www/: .gitignore  elm.js  index.html  index.js  manifest.json  package-lock.json  package.json
www/src/: Main.elm
